team bio images stretching fixed

--- a/css/new-age.css
+++ b/css/new-age.css
@@ -971,13 +971,6 @@ section.team .profile-team img {
   max-width: 280px;
 }
 
-@media (min-width: 100px) and (max-width: 575px) {
-  section.team .profile-team img {
-    width: 100%;
-    height: 100%;
-  }
-}
-
 section.team .text-team {
   margin: 50px 0px;
   text-align: justify;
