--- a/scss/_team.scss
+++ b/scss/_team.scss
@@ -32,10 +32,10 @@ section.team {
   .profile-team img {
     max-width: 280px;
 
-    @media (min-width: 100px) and (max-width: 575px) {
-      width: 100%;
-      height: 100%;
-    }
+    // @media (min-width: 100px) and (max-width: 375px) {
+    //   width: 100%;
+    //   height: 100%;
+    // }
   }
 
   .text-team {
